--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=reactivities.db"
-  }
+  },
+
+  "TokenKey" : "super secret key"
 }
