end of section 16

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,5 +10,11 @@
     "DefaultConnection": "Data source=reactivities.db"
   },
 
-  "TokenKey" : "super secret key"
+  "TokenKey" : "super secret key",
+
+  "Cloudinary" : {
+    "CloudName": "dn4pvfdqb",
+    "ApiKey": "294974621225974",
+    "ApiSecret": "pcPO1ciSdEoJPEyt-ktklVoEvTg"
+  }
 }
